added benchmark for buffer size for reading from disk #44